# 2026_td3

1_ega/1_informes/: firmware_v1.c
1_ega/2_workspace/Display_encoder/: CMakeLists.txt
1_ega/2_workspace/Ecualizador/: CMakeLists.txt
1_ega/2_workspace/Proyecto_SquareLine_Studio/: .gitignore  freq_response_analyzer.sll  freq_response_analyzer.slp  freq_response_analyzer.spj  freq_response_analyzer_events.py  project.info
1_ega/2_workspace/carga_electronica/: .gitignore  CMakeLists.txt
1_ega/2_workspace/ecualizador/: CMakeLists.txt
1_ega/2_workspace/firmware/: CMakeLists.txt
1_ega/2_workspace/freq_response_analyzer/: .gitignore  CMakeLists.txt  sdkconfig
1_ega/2_workspace/main/: idf_component.yml  main.c
1_ega/2_workspace/proyecto/: CMakeLists.txt  sdkconfig  sdkconfig.old
1_ega/3_esquematico_pcb/: BOM.csv  Esquematico_EGA.kicad_pcb  Esquematico_EGA.kicad_prl  Esquematico_EGA.kicad_pro  Esquematico_EGA.kicad_sch  ega_osciloscopio.kicad_sch
1_ega/3_esquematico_pcb/Proyecto_TDIII_kicad/: Proyecto_TDIII_kicad.kicad_prl  Proyecto_TDIII_kicad.kicad_pro  Proyecto_TDIII_kicad.kicad_sch  fp-lib-table
1_ega/3_esquematico_pcb/ega-sch/: ega-sch.kicad_pcb  ega-sch.kicad_prl  ega-sch.kicad_pro  ega-sch.kicad_sch  fp-info-cache
1_ega/4_anexos/: osciloscopio.py
1_ega/4_anexos/Simulaciones/: .gitignore
2_egb/1_informes/: README.md
2_egb/2_rtos/: README.md
2_egb/2_rtos/freertos/: CMakeLists.txt
2_egb/2_rtos/freertos/portable/GCC/RP2350_ARM_NTZ/: port.c
2_egb/3_gpos/: README.md
2_egb/4_apps/: README.md
2_egb/5_anexos/: README.md
2_egb/6_referencias/: README.md
3_trabajos_practicos/tp2/freertos/: CMakeLists.txt  README.md
3_trabajos_practicos/tp5/: Makefile  README.md  gpio_driver.c  gpio_driver.h  kernel_module.c
4_workspace/: README.md
4_workspace/freertos_blinky/: CMakeLists.txt  freertos_blinky.c
4_workspace/freertos_mutex/: CMakeLists.txt  freertos_mutex.c
4_workspace/freertos_queue_basic/: CMakeLists.txt  freertos_queue_basic.c
4_workspace/freertos_queue_irq/: CMakeLists.txt  freertos_queue_irq.c
4_workspace/freertos_queue_typedef/: CMakeLists.txt  README.md  freertos_queue_typedef.c
4_workspace/freertos_semphr/: CMakeLists.txt  freertos_semphr.c
4_workspace/freertos_semphr_counting_irq/: CMakeLists.txt  freertos_semphr_counting_irq.c
4_workspace/freertos_semphr_irq/: CMakeLists.txt  freertos_semphr_irq.c
4_workspace/freertos_software_timer/: CMakeLists.txt  README.md  freertos_software_timer.c
4_workspace/freertos_static_blinky/: CMakeLists.txt  FreeRTOSConfig_User.h  README.md  freertos_static_blinky.c
4_workspace/freertos_static_queue/: CMakeLists.txt  README.md  freertos_static_queue.c
4_workspace/freertos_static_software_timer/: CMakeLists.txt  README.md  freertos_static_software_timer.c
4_workspace/freertos_task_handle/: CMakeLists.txt  freertos_task_handle.c
4_workspace/freertos_task_params/: CMakeLists.txt
4_workspace/gpos_char_dev/: Makefile  README.md  char_dev.c
4_workspace/gpos_char_dev_fops/: Makefile  README.md  char_dev_ops.c
4_workspace/gpos_dev_tree_uart/: .gitignore  Makefile  README.md  dev_tree_uart.c  td3_uart_overlay.dts
4_workspace/gpos_hello_kernel/: Makefile  README.md  hello_kernel.c
4_workspace/gpos_kthread_v1/: Makefile  README.md  kthread.c
4_workspace/gpos_kthread_v2/: README.md  kthread.c
4_workspace/gpos_mutex/: Makefile  README.md  mutex.c
4_workspace/gpos_param/: Makefile  README.md  param.c
4_workspace/gpos_procfs/: Makefile  README.md  main.c  main.py  procfs.c
4_workspace/gpos_waitqueue/: Makefile  README.md  waitqueue.c
5_docs/raspberrypi/: README.md
(+167 files in other folders)
